--- a/style.css
+++ b/style.css
@@ -1,8 +1,4 @@
-<head>
-<link rel="stylesheet" type="text/css" href="style.css">
-</head>
-
 body {
-  background-color: lightblue;
+  h1: lightblue;
   
 }
