--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
 <head>
 <style>
-
-  h1 {
-    color: lightblue;
+  table, td, th {
+      border: 1px solid green;
+  }
+  
+  th {
+      background-color: green;
+      color: white;
   }
 </style>
 </head>
