--- a/style.css
+++ b/style.css
@@ -17,5 +17,9 @@
       background-color: gray;
       color: blue;
   }
+  .time {
+      background-color: black;
+      color: white;
+  }
 </style>
 </head>
