--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
       background-color: black;
   }
   table, td, th {
-      border: 2px solid blue;
+      border: 2px dashed orange;
       text-align: center;
   
   }
