--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 <head>
 <style>
-
+  h1 {
+      color: #83FF59;
+  }
   table, td, th {
       border: 2px dashed orange;
       text-align: center;
