--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 <head>
 <style>
   table, td, th {
-      border: 2px dashed orange;
+      border: 2px dashed white;
       text-align: center;
   }
   th {
