--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
   }
   .day {
       background-color: purple;
-      color: #FF66FF;
+      color: white;
   }
   .food {
       background-color: green;
