--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 <style>
   table, td, th {
       border: 2px #FF66FF;
-      margin-top: 50px;
+      margin-top: 100px;
   }
   th {
       background-color: blue;
@@ -32,6 +32,13 @@
   .practice {
       background-color: blue;
       color: white;
+  }
+  .caption {
+    position: fixed;
+    background-color: pink;
+    width: 100%;
+    top: 0px;
+    left: 0px;
   }
 </style>
 </head>
